fix java 11 unchecked warnings (#277)
* fix java 11 deprecated and unchecked warnings